Fixed collapsed panel for resizing

--- a/css/main.css
+++ b/css/main.css
@@ -13,13 +13,6 @@
   }
 }
 
-@media only screen and (max-width: 1185px) {
-  #navbar-links{
-    position: absolute;
-    left: 50.5vh;
-  }
-}
-
 @media only screen and (max-width: 950px) {
 	#table{
 		min-width: 920px;
@@ -33,9 +26,40 @@
   }
 }
 
-@media (min-width: 0px) {
-  .navbar {
-    border-radius: 0%;
+@media (max-width: 1590px) {
+  .navbar-header {
+      float: none;
+  }
+  .navbar-left,.navbar-right {
+      float: none !important;
+  }
+  .navbar-toggle {
+      display: block;
+  }
+  .navbar-collapse {
+      border-top: 1px solid transparent;
+      box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+  }
+  .navbar-fixed-top {
+      top: 0;
+      border-width: 0 0 1px;
+  }
+  .navbar-collapse.collapse {
+      display: none!important;
+  }
+  .navbar-nav {
+      float: none!important;
+      margin-top: 7.5px;
+  }
+  .navbar-nav>li {
+      float: none;
+  }
+  .navbar-nav>li>a {
+      padding-top: 10px;
+      padding-bottom: 10px;
+  }
+  .collapse.in{
+      display:block !important;
   }
 }
 
@@ -221,12 +245,6 @@ select#sortList {
   background-color: #9e0707;
 }
 
-#addTable{
-  width: 100%;
-  height: 100%;
-  border: none;
-}
-
 
 /* Individual cards */
 
@@ -294,19 +312,31 @@ select#sortList {
 }
 
 #navbar-links {
-  float: right;
-  white-space: nowrap;
-  color: #333
+  background-color: whitesmoke;
+  overflow-x: hidden;
+}
+
+#navbar-links li:not(#searchBar):hover {
+  background-color: #dcdcdc;
 }
 
 #navbar-links li > .btn {
+  width: 100%;
+  text-align: left;
+}
+
+.navbar-nav {
+  float: right;
+  color: #333
+}
+
+.navbar-nav li > .btn {
   border-radius: 0;
   height: 55px;
   background-color: transparent;
 }
 
-
-#navbar-links li > .btn:active {
+.navbar-nav li > .btn:active {
   background: #ccc;
   -webkit-box-shadow: none;
   box-shadow: none;
@@ -499,5 +529,5 @@ select#sortList {
 }
 
 .scrollTop:hover {
-  background-color: rgba(204, 204, 204, 1);
+  background-color: rgba(164, 164, 164, 1);
 }
